--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>DARKNEWS</title>
     </head>
     <body class="db">
-        darkness
+        <h1>darkness news</h1>
+        <div class="content">
+            
+        </div>
     </body>
 </html>
