--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body class="db">
         <h1>darkness news</h1>
         <div class="content">
-            
+            <h3>
+                nie uwierzycie co się stało ostatnio
+            </h3>
         </div>
     </body>
 </html>
