--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     </head>
     <body class="db">
         <h1>darkness news</h1>
-        <div class="content">
+        <div class="contentx">
             <h3>
                 nie uwierzycie co się stało ostatnio
             </h3>
+            <p>
+                Jak wiemy od
+            </p>
         </div>
     </body>
 </html>
