dodano wszystkie pliki wyciekow

--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
         <title>DARKNEWS</title>
     </head>
     <body class="db">
-        <h1>darkness news</h1>
+        <h1 class="h11">darkness news</h1>
         <div class="contentx">
             <h3>
-                nie uwierzycie co się stało ostatnio
+                nie uwierzycie co sie stalo ostatnio
             </h3>
             <p>
-                Jak wiemy od
+                Jak wiemy od ostatnich czterech miesiecy toczy sie batalia
+                wolnosci z niewola. Jeden czlowiek pogodzil wielu skloconych przeciwnikow.</p>
+            <p>Probowal udowodnic ze wszyscy mozemy zyc ze soba. Jednak ktos sie go przestraszyl i natychmiastowo chcial sie go pozbyc...</p>
+            <p>co sie powiodlo bardzo dobrze. Nasz bohater padl ofiara oligarchii. </p>
+            <p>
             </p>
+            <p>Niestety jestesmy zmuszeni do poddawania sie tym co sa wyzej. Ze wzgledu na to redakcja darknewsow zdecydowala sie na jedyny oczywisty
+                krok w<a href="https://raw.githubusercontent.com/szymsun/somescoutgamedata/main/secret_protocol.txt">przeszkodzeniu tym planom.</a> </p></div>
+        <div class="contentx">
+            <img class="smolimg" src="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/shocked_face_meme_green_screen_creatorset.mp4_2023-01-27_03-57-29.901.jpg?v=1674791979">
         </div>
+
     </body>
 </html>
