--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>Niestety jestesmy zmuszeni do poddawania sie tym co sa wyzej. Ze wzgledu na to redakcja darknewsow zdecydowala sie na jedyny oczywisty
                 krok w<a href="https://raw.githubusercontent.com/szymsun/somescoutgamedata/main/secret_protocol.txt">przeszkodzeniu tym planom.</a> </p></div>
         <div class="contentx">
-            <img class="smolimg" src="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/shocked_face_meme_green_screen_creatorset.mp4_2023-01-27_03-57-29.901.jpg?v=1674791979">
+            <img class="smolimg" src="https://i.kym-cdn.com/entries/icons/facebook/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.jpg">
         </div>
 
     </body>
